<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:background="@drawable/activity_card_design">

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activityTitle"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/timeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"/>
    <ImageView
        android:id="@+id/activityPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeLeft"
        android:contentDescription="@string/activity_image"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>