<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".fragments.calmingActivities.BreathingFragment">

    <TextView
        android:id="@+id/breathInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:textSize="28sp"
        />
    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:max="4"
            android:progressDrawable="@drawable/progress_bar"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <Button
        android:id="@+id/breathActivityClose"
        android:text="@string/close_activity"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="150dp"/>

</FrameLayout>